Bug 181221 - lighttable crashes when playing with the zoom
Summary: lighttable crashes when playing with the zoom
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: LightTable-Engine (other bugs)
Version First Reported In: 0.10.0
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-18 20:02 UTC by Salvatore Brigaglia
Modified: 2022-01-19 15:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.6.0
Sentry Crash Report:


Attachments
the backtrace from gdb (7.72 KB, text/plain)
2009-01-18 20:08 UTC, Salvatore Brigaglia
Details
digikam output and gdb backtrace (138.62 KB, text/plain)
2009-01-18 21:08 UTC, Salvatore Brigaglia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Salvatore Brigaglia 2009-01-18 20:02:55 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

I have this crash after some minutes of playing with the light table. This seems to be related to the zoom tool in the low-right corner of the left picture. Attached the bt i got from gdb.
Comment 1 Salvatore Brigaglia 2009-01-18 20:08:28 UTC
Created attachment 30396 [details]
the backtrace from gdb
Comment 2 caulier.gilles 2009-01-18 20:16:35 UTC
attachement is an unsuitable binary file. please post text file...

Gilles Caulier
Comment 3 Salvatore Brigaglia 2009-01-18 21:08:57 UTC
Created attachment 30397 [details]
digikam output and gdb backtrace

the last part of the digikam output running inside gdb and the backtrace of the crash
Comment 4 Marcel Wiesweg 2009-01-18 22:08:04 UTC
Pasting relevant lines:

QObject: Do not delete object, 'unnamed', during its event handler!                                                                                                                                                
Program received signal SIGSEGV, Segmentation fault.
0xb5dcea03 in ?? () from /usr/lib/libQtGui.so.4
(gdb) all bt thread apply
Undefined command: "all".  Try "help".
(gdb) bt
#0  0xb5dcea03 in ?? () from /usr/lib/libQtGui.so.4
#1  0xb5dcdaf5 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#2  0xb5df60ba in ?? () from /usr/lib/libQtGui.so.4
#3  0xb4f9f9a8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#4  0xb4fa3063 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0xb4fa3221 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0xb58cffb8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb5df57b5 in ?? () from /usr/lib/libQtGui.so.4
#8  0xb58a401a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#9  0xb58a41da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#10 0xb58a6895 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#11 0xb5d5c777 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#12 0x082f75f6 in main (argc=1, argv=0xbffff064) at /home/tore/sources/graphics/digikam/digikam/main.cpp:188
Comment 5 Marcel Wiesweg 2009-01-18 22:13:26 UTC
Confirmed:

#0  0x00007ffff2e591fd in QETWidget::translateMouseEvent (this=0x3edc440, event=0x7fffffffc6e0) at kernel/qapplication_x11.cpp:3991
#1  0x00007ffff2e57a37 in QApplication::x11ProcessEvent (this=0x5c, event=0x7fffffffd0f0) at kernel/qapplication_x11.cpp:3158
#2  0x00007ffff2e7e1d4 in x11EventSourceDispatch (s=0x959d70, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:142
#3  0x00007fffeca010db in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fffeca048ad in ?? () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fffeca04a6b in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#6  0x00007ffff7b224ef in QEventDispatcherGlib::processEvents (this=0x956640, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#7  0x00007ffff2e7d97f in QGuiEventDispatcherGlib::processEvents (this=0x7fffffffc680, flags=<value optimized out>)
    at kernel/qguieventdispatcher_glib.cpp:198
#8  0x00007ffff7af89a2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -11296}) at kernel/qeventloop.cpp:143
#9  0x00007ffff7af8b2d in QEventLoop::exec (this=0x7fffffffd420, flags={i = -11216}) at kernel/qeventloop.cpp:194
#10 0x00007ffff7afaffd in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#11 0x00000000006706b7 in main (argc=<value optimized out>, argv=0x7fffffffdc68)
Comment 6 Marcel Wiesweg 2009-01-18 22:16:31 UTC
I guess the debug message "Do not delete during event handler" hints at the culprit.

#0  qWarning (msg=0x7ffff7b846e0 "QObject: Do not delete object, '%s', during its event handler!") at global/qglobal.cpp:2186
#1  0x00007ffff7b107f9 in ~QObject (this=0x3f17910) at kernel/qobject.cpp:900
#2  0x00007ffff2e4078f in ~QWidget (this=0x3f17910) at kernel/qwidget.cpp:1351
#3  0x00007ffff11b60f6 in ~PanIconWidget (this=0x3f17910)
    at /home/marcel/freshmeat/multimedia/kde4/src/extragear/graphics/digikam/libs/widgets/common/paniconwidget.cpp:90
#4  0x00007ffff7b07941 in QObjectPrivate::deleteChildren (this=0x3f17710) at kernel/qobject.cpp:1884
#5  0x00007ffff2e405ed in ~QWidget (this=0x3dbaa40) at kernel/qwidget.cpp:1338
#6  0x00007ffff704132d in ~KPopupFrame (this=0x3dbaa40) at /usr/src/debug/kdelibs-4.1.3/kdeui/widgets/kdatetable.cpp:784
#7  0x000000000051a1b3 in Digikam::LightTablePreview::slotPanIconSelectionMoved (this=0x3cc1290, r=@0x3ef733c, b=true)
    at /home/marcel/freshmeat/multimedia/kde4/src/extragear/graphics/digikam/utilities/lighttable/lighttablepreview.cpp:571
#8  0x000000000051f733 in Digikam::LightTablePreview::qt_metacall (this=0x3cc1290, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>,
    _a=0x7fffffffbf00) at /home/marcel/freshmeat/multimedia/kde4/build/extragear/graphics/digikam/digikam/lighttablepreview.moc:106
#9  0x00007ffff7b0e454 in QMetaObject::activate (sender=0x3f17910, from_signal_index=<value optimized out>, to_signal_index=27, argv=0x3f179b0)
    at kernel/qobject.cpp:3031
#10 0x00007ffff11b6713 in Digikam::PanIconWidget::signalSelectionMoved (this=0x7ffff7b846e0, _t1=<value optimized out>, _t2=true)
    at /home/marcel/freshmeat/multimedia/kde4/build/extragear/graphics/digikam/digikam/paniconwidget.moc:90
#11 0x00007ffff11b68ad in Digikam::PanIconWidget::mouseReleaseEvent (this=0x3f17910)
    at /home/marcel/freshmeat/multimedia/kde4/src/extragear/graphics/digikam/libs/widgets/common/paniconwidget.cpp:312
Comment 7 Marcel Wiesweg 2009-01-18 22:22:16 UTC
SVN commit 913166 by mwiesweg:

Use deleteLater (already done in all seven other occurrences)

BUG: 181221

 M  +1 -1      lighttablepreview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913166