Use deleteLater (already done in all seven other occurrences)

BUG: 181221

svn path=/trunk/extragear/graphics/digikam/; revision=913166